Made so many changes, mainly just testing back end to get the GET/POST to work

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seed"
+    "seed": "node seed",
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
